objects/Product_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Major_Release__c</fullName>
        <label>Major Release</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Support_Product__c</referenceTo>
        <relationshipLabel>Product Versions</relationshipLabel>
        <relationshipName>Product_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Siebel_Product_ID__c</fullName>
        <label>Siebel Product ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Product Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>